fixes: allow user to toggle between movies & tv when searching; enable user to search by pressing enter (no longer requiring mouseclick); display number of results after searching; ensure movie/tv series posters never overlap with overviews; feat: create an about page

--- a/src/ContentPages.css
+++ b/src/ContentPages.css
@@ -1,23 +1,25 @@
 img.Content-poster {
 	width: 30vw;
+	padding: 5px;
 }
 
 h1.Content-title {
-	font-size: 6vw;
+	font-size: 3em;
 }
 
 h2.Content-tagline {
-	font-size: 3.5vw;
+	font-size: 2.5em;
 }
 
 h3.Content-tag {
 	display: inline-block;
-	margin: 0.5em 1vw;
-	font-size: 2.5vmin;
+	margin: 0.5em 1em;
+	font-size: 1.5em;
 }
 
 .Content-data {
-	font-size: 2vmin;
+	font-size: 1.25em;
+	padding: 5px;
 }
 
 .Content-video {
