--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -1,9 +1,3 @@
-.LandingPage-link {
-	color: black;
-	text-decoration: none;
-}
-
-.LandingPage-link:hover {
-	color: rgb(0, 0, 155);
-	text-decoration: underline;
+.LandingPage-poster {
+	width: 25vw;
 }
